# python-etautil

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  README_pypi.md  build.bat  build_docs.bat  build_pypi.bat  environment.yml  pyproject.toml
.github/workflows/: github-actions-demo.yml  publish-pypi-release.yml
docs/src/: conf.py  index.rst
src/: Makefile  conf.py  index.rst
src/etautil/: __init__.py  _eta.py  _timestring.py  constants.py  eta.py  time.py  timeformat.py  timestring.py  validate.py
