[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "etautil"
requires-python = ">3.10"
dynamic = ["version", "description"]
readme = "README_pypi.md"
license= {file = "LICENSE"}
authors = [
    {name = "Ella Jameson", email = "ellagjameson@gmail.com"}
]

classifiers = []
dependencies = [
    "pydantic",
    "pendulum"
]

[project.urls]
homepage = "https://github.com/nimaid/etautil"
repository = "https://github.com/nimaid/etautil"
issues = "https://github.com/nimaid/etautil/issues"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
